--- a/src/widgets/navbar/navbar.module.css
+++ b/src/widgets/navbar/navbar.module.css
@@ -27,7 +27,7 @@
 
 .nav_module {
   position: absolute;
-  z-index: 3;
+  z-index: 100;
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.3);
   border-radius: 0 0 25px 25px;
   background-color: #fff;
@@ -46,20 +46,29 @@
   margin: auto;
   border-radius: 0 0 25px 25px;
   padding: 10px;
-  
 }
-.exit{
-    padding-top:10px ;
-font-size: 20px;
-font-weight: 700;
-display: flex;
+.exit {
+  padding-top: 10px;
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
 }
 .nav_profil {
- font-size: 20px;
-font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 .closeModule {
-  position: absolute;
+  position: fixed;
   top: 5px;
   right: 5px;
+}
+.overlov {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  background-color: aliceblue;
 }
