--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,22 @@
 @import "./null.css";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f4f2ee;
-  color: var(--text-color);    
+  color: var(--text-color);
   user-select: none;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "slnt" 0;
-    font-size: 14px;
+  font-variation-settings: "slnt" 0;
+  font-size: 14px;
 }
-
 
 .container {
   max-width: 992px;
