--- a/src/widgets/navbar/navbar.module.css
+++ b/src/widgets/navbar/navbar.module.css
@@ -36,7 +36,7 @@
   background-color: #fff;
 
   width: 20%;
-  height: 15%;
+  height: 20vh;
   top: 8vh;
   right: 10%;
   transition: 0.5s;
@@ -45,7 +45,7 @@
 .nav_module__inner {
   width: 80%;
   height: 90%;
-  background-color: #f1ecec;
+  background-color: rgb(231, 234, 237);
   margin: auto;
   border-radius: 0 0 25px 25px;
   padding: 10px;
