--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -91,6 +91,28 @@
     font-weight: 400;
 }
 
+.posts {
+    background-color: #fff;
+    border: 1px solid #dfdeda;
+    border-radius: 15px;
+    min-height: 700px;
+    margin-top: 20px;
+}
+
+.addPost {
+    position: absolute;
+    bottom: 40px;
+    left: 120px;
+
+}
+
+.postsInner {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 870px;
+    padding: 40px;
+}
+
 @media screen and (max-width: 449px) {
     .avatar {
         top: 80px;
