--- a/src/ui/input/input.module.css
+++ b/src/ui/input/input.module.css
@@ -13,6 +13,11 @@
   transition: 0.3s;
 }
 
+.labelName {
+  display: block;
+  margin-bottom: 5px;
+}
+
 .label input:hover {
   background-color: #ececec;
 }
